# stockplasmoid

./: APIkey  CMakeLists.txt  Readme.md  install.sh  stockplasmoid.kdev4
libonvistascrapper/: CMakeLists.txt  abstract_stock.cpp  abstract_stock.hpp  qmldir  warrant.hpp  warrantmodel.cpp  warrantmodel.hpp
libonvistascrapper/Tests/: CMakeLists.txt  main.cpp
plasmoid/: metadata.desktop
plasmoid/contents/config/: config.qml  main.xml
plasmoid/contents/ui/: Stockdelegate.qml  main.qml  stockparser.js
plasmoid/contents/ui/config/: Onvistaurldelegate.qml  configgeneral.qml  configscripts.js
